#91076: Fix overlapping autocomplete suggestion box

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -1,4 +1,4 @@
-/* $Id: drupal.css,v 1.147.2.3 2006/06/30 00:13:45 unconed Exp $ */
+/* $Id: drupal.css,v 1.147.2.4 2006/10/24 19:37:26 unconed Exp $ */
 
 /*
 ** HTML elements
@@ -576,6 +576,7 @@ ul.secondary a.active {
   position: absolute;
   border: 1px solid;
   overflow: hidden;
+  z-index: 100;
 }
 #autocomplete ul {
   margin: 0;
